Some JNI calls made without checking exceptions in media

XMLWordPrintable

    • b23
    • generic
    • generic

      WARNING in native method: JNI call made without checking exceptions when required to from CallObjectMethodV
              at com.sun.media.jfxmediaimpl.platform.gstreamer.GSTMedia.gstInitNativeMedia(javafx.media@19/Native Method)
              at com.sun.media.jfxmediaimpl.platform.gstreamer.GSTMedia.init(javafx.media@19/GSTMedia.java:65)
              at com.sun.media.jfxmediaimpl.platform.gstreamer.GSTMedia.<init>(javafx.media@19/GSTMedia.java:52)
              at com.sun.media.jfxmediaimpl.platform.gstreamer.GSTMediaPlayer.<init>(javafx.media@19/GSTMediaPlayer.java:63)
              at com.sun.media.jfxmediaimpl.platform.gstreamer.GSTPlatform.createMediaPlayer(javafx.media@19/GSTPlatform.java:119)
              at com.sun.media.jfxmediaimpl.platform.PlatformManager.createMediaPlayer(javafx.media@19/PlatformManager.java:245)
              at com.sun.media.jfxmediaimpl.NativeMediaManager.getPlayer(javafx.media@19/NativeMediaManager.java:295)
              at com.sun.media.jfxmedia.MediaManager.getPlayer(javafx.media@19/MediaManager.java:118)
              at javafx.scene.media.MediaPlayer.init(javafx.media@19/MediaPlayer.java:475)
              - locked <0x00000007c0200f08> (a java.lang.Object)
              at javafx.scene.media.MediaPlayer$InitMediaPlayer.run(javafx.media@19/MediaPlayer.java:533)
              at java.lang.Thread.run(java.base@19-ea/Thread.java:1589)

            Assignee:
            Alexander Matveev
            Reporter:
            Marc Owerfeldt
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: