8304290: Some JNI calls made without checking exceptions in media